# FairXORNG

backend/: CMakeLists.txt  README.md  app.py  fairxorng.cpp  fairxorng.h  fairxorng_bindings.cpp
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx
frontend/src/components/: ApiStatus.jsx  ClassList.jsx  OutcomeCategoryForm.jsx  ProbabilityClassForm.jsx  ResultDisplay.jsx  RollButton.jsx
frontend/src/services/: api.js
